--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Fullstack CI/CD Pipeline
+name: CI/CD Pipeline
 
 on:
   push:
@@ -12,52 +12,8 @@ env:
   IMAGE_NAME: fullstack-ci-cd-app
 
 jobs:
-  test-backend:
-    runs-on: ubuntu-latest
-    services:
-      mysql:
-        image: mysql:8.0
-        env:
-          MYSQL_ROOT_PASSWORD: rootpassword
-          MYSQL_DATABASE: users_db
-          MYSQL_USER: user
-          MYSQL_PASSWORD: password
-        ports:
-          - 3306:3306
-        options: >-
-          --health-cmd="mysqladmin ping -h localhost"
-          --health-interval=10s
-          --health-timeout=5s
-          --health-retries=5
-
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Wait for MySQL to be healthy
-        run: |
-          for i in {1..30}; do
-            nc -z localhost 3306 && echo "MySQL is up" && break
-            echo "Waiting for MySQL..."
-            sleep 2
-          done
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
-
-      - name: Install backend dependencies
-        working-directory: ./backend
-        run: npm install
-
-      - name: Run backend tests
-        working-directory: ./backend
-        run: npm test
-
   build-and-push:
-    needs: test-backend
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v3
 
