--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -14,4 +14,4 @@ COPY . .
 COPY wait-for-mysql.sh /wait-for-mysql.sh
 RUN chmod +x /wait-for-mysql.sh
 
-CMD ["/wait-for-mysql.sh", "npm", "start"]
+CMD ["/wait-for-mysql.sh", "localhost", "npm", "test"]
